moving drawing functions into draw factory from map and image-map controllers

--- a/www/index.html
+++ b/www/index.html
@@ -90,6 +90,7 @@
     <script src="app/shared/localstorage.service.js"></script>
 
     <!-- ng factories -->
+    <script src="app/map/draw.factory.js"></script>
     <script src="app/map/offline-tile.factory.js"></script>
     <script src="app/map/slippy-tile-names.factory.js"></script>
     <script src="app/shared/spots.factory.js"></script>
