create initialize-map factory

--- a/www/index.html
+++ b/www/index.html
@@ -91,6 +91,7 @@
 
     <!-- ng factories -->
     <script src="app/map/draw.factory.js"></script>
+    <script src="app/map/initialize-map.factory.js"></script>
     <script src="app/map/offline-tile.factory.js"></script>
     <script src="app/map/slippy-tile-names.factory.js"></script>
     <script src="app/shared/spots.factory.js"></script>
