--- a/www/index.html
+++ b/www/index.html
@@ -95,7 +95,7 @@
     <script src="app/map/offline-tile.factory.js"></script>
     <script src="app/map/slippy-tile-names.factory.js"></script>
     <script src="app/shared/spots.factory.js"></script>
-    <script src="app/map/view-extent.factory.js"></script>
+    <script src="app/map/map-view.factory.js"></script>
     <script src="app/shared/login.factory.js"></script>
     <script src="app/map/symbology.factory.js"></script>
     <script src="app/map/map-layer.factory.js"></script>
