--- a/www/index.html
+++ b/www/index.html
@@ -89,16 +89,18 @@
     <script src="app/shared/localstorage.service.js"></script>
 
     <!-- ng factories -->
-    <script src="app/map/draw.factory.js"></script>
-    <script src="app/map/initialize-map.factory.js"></script>
     <script src="app/map/offline-tile.factory.js"></script>
-    <script src="app/map/slippy-tile-names.factory.js"></script>
-    <script src="app/shared/spots.factory.js"></script>
-    <script src="app/map/map-view.factory.js"></script>
-    <script src="app/shared/login.factory.js"></script>
-    <script src="app/map/symbology.factory.js"></script>
+    <script src="app/map/map-draw.factory.js"></script>
+    <script src="app/map/map-features.factory.js"></script>
     <script src="app/map/map-layer.factory.js"></script>
+    <script src="app/map/map-setup.factory.js"></script>
+    <script src="app/map/map-view.factory.js"></script>
+    <script src="app/map/slippy-tile-names.factory.js"></script>
+    <script src="app/map/symbology.factory.js"></script>
+    <script src="app/shared/login.factory.js"></script>
     <script src="app/shared/settings.factory.js"></script>
+    <script src="app/shared/spots.factory.js"></script>
+    <script src="app/shared/helpers.factory.js"></script>
     <script src="app/spot/content-model-survey.factory.js"></script>
 
     <!-- ng filters -->
