switch to using function declarations in rest of map factories and controllers

--- a/www/app/map/offline-map.html
+++ b/www/app/map/offline-map.html
@@ -17,7 +17,8 @@
             <button class='button button-second icon-left button-small button-calm ion-edit ' ng-click='vm.edit(map)'>
               Edit
             </button>
-            <button class='button icon-left button-small button button-assertive ion-trash-b' ng-click='vm.delete(map)'>
+            <button class='button icon-left button-small button button-assertive ion-trash-b'
+                    ng-click='vm.deleteTiles(map)'>
               Delete
             </button>
           </div>
