refactor coordinate range service to a factory

--- a/www/index.html
+++ b/www/index.html
@@ -85,10 +85,10 @@
     <script src="app/shared/current-spot.service.js"></script>
     <script src="app/shared/sync.service.js"></script>
     <script src="app/shared/image-map.service.js"></script>
-    <script src="app/map/coordinate-range.service.js"></script>
     <script src="app/shared/localstorage.service.js"></script>
 
     <!-- ng factories -->
+    <script src="app/map/coordinate-range.factory.js"></script>
     <script src="app/map/offline-tile.factory.js"></script>
     <script src="app/map/map-draw.factory.js"></script>
     <script src="app/map/map-features.factory.js"></script>
