--- a/www/index.html
+++ b/www/index.html
@@ -83,7 +83,6 @@
     <!-- ng services -->
     <script src="app/shared/new-spot.service.js"></script>
     <script src="app/shared/current-spot.service.js"></script>
-    <script src="app/shared/sync.service.js"></script>
     <script src="app/shared/image-map.service.js"></script>
     <script src="app/shared/localstorage.service.js"></script>
 
@@ -97,7 +96,8 @@
     <script src="app/map/map-view.factory.js"></script>
     <script src="app/map/slippy-tile-names.factory.js"></script>
     <script src="app/map/symbology.factory.js"></script>
-    <script src="app/shared/login.factory.js"></script>
+    <script src="app/remote-connection/login.factory.js"></script>
+    <script src="app/remote-connection/remote-server.factory.js"></script>
     <script src="app/shared/settings.factory.js"></script>
     <script src="app/shared/spots.factory.js"></script>
     <script src="app/shared/helpers.factory.js"></script>
