switch to using function declarations in settings controller and factory

--- a/www/index.html
+++ b/www/index.html
@@ -98,7 +98,7 @@
     <script src="app/map/symbology.factory.js"></script>
     <script src="app/remote-connection/login.factory.js"></script>
     <script src="app/remote-connection/remote-server.factory.js"></script>
-    <script src="app/shared/settings.factory.js"></script>
+    <script src="app/settings/settings.factory.js"></script>
     <script src="app/shared/spots.factory.js"></script>
     <script src="app/shared/helpers.factory.js"></script>
     <script src="app/spot/content-model-survey.factory.js"></script>
