change the rest of the services to factories and switch to using function declarations

--- a/www/index.html
+++ b/www/index.html
@@ -80,27 +80,25 @@
     <script src="app/spot/rockdescription-tab.controller.js"></script>
     <script src="app/spot/rocksample-tab.controller.js"></script>
 
-    <!-- ng services -->
-    <script src="app/shared/new-spot.service.js"></script>
-    <script src="app/shared/current-spot.service.js"></script>
-    <script src="app/shared/image-map.service.js"></script>
-    <script src="app/shared/localstorage.service.js"></script>
-
     <!-- ng factories -->
     <script src="app/map/coordinate-range.factory.js"></script>
-    <script src="app/map/offline-tile.factory.js"></script>
+    <script src="app/map/image-map.factory.js"></script>
     <script src="app/map/map-draw.factory.js"></script>
     <script src="app/map/map-features.factory.js"></script>
     <script src="app/map/map-layer.factory.js"></script>
     <script src="app/map/map-setup.factory.js"></script>
     <script src="app/map/map-view.factory.js"></script>
+    <script src="app/map/offline-tile.factory.js"></script>
     <script src="app/map/slippy-tile-names.factory.js"></script>
     <script src="app/map/symbology.factory.js"></script>
     <script src="app/remote-connection/login.factory.js"></script>
     <script src="app/remote-connection/remote-server.factory.js"></script>
     <script src="app/settings/settings.factory.js"></script>
-    <script src="app/shared/spots.factory.js"></script>
+    <script src="app/shared/current-spot.factory.js"></script>
     <script src="app/shared/helpers.factory.js"></script>
+    <script src="app/shared/localstorage.factory.js"></script>
+    <script src="app/shared/new-spot.factory.js"></script>
+    <script src="app/shared/spots.factory.js"></script>
     <script src="app/spot/content-model-survey.factory.js"></script>
 
     <!-- ng filters -->
