--- a/www/index.html
+++ b/www/index.html
@@ -66,6 +66,9 @@
     <script src="app/debug/debug.controller.js"></script>
     <script src="app/map/image-maps.controller.js"></script>
     <script src="app/map/image-map.controller.js"></script>
+    <script src="app/menu/menu.controller.js"></script>
+    <script src="app/project/project.controller.js"></script>
+    <script src="app/user/user.controller.js"></script>
 
     <!-- ng spot tab controllers -->
     <script src="app/spot/abstract-spot.controller.js"></script>
