get and save a user name to local storage

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -13,7 +13,7 @@
           <td class='user' rowspan="2" ng-click='vm.editUser();'>
             <img src='img/ninja.png'>
             <br>
-            <span class='user-name'>User Name</span>
+            <span class='user-name'>{{vm.userName}}</span>
           </td>
           <td class='project'>
             <span class='project-name-header'>Project</span>
