--- a/www/index.html
+++ b/www/index.html
@@ -103,6 +103,7 @@
     <script src="app/shared/new-spot.factory.js"></script>
     <script src="app/shared/spots.factory.js"></script>
     <script src="app/spot/content-model-survey.factory.js"></script>
+    <script src="app/user/user.factory.js"></script>
 
     <!-- ng filters -->
     <script src="app/map/normalize-bytes.filter.js"></script>
