--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -10,10 +10,16 @@
     <ion-content>
       <table class='project-info'>
         <tr>
-          <td class='user' rowspan="2" ng-click='vm.editUser();'>
-            <img src='img/ninja.png'>
-            <br>
-            <span class='user-name'>{{vm.userName}}</span>
+          <td menu-close class='user' rowspan="2" ng-click='vm.editUser();'>
+            <div ng-show='vm.loggedIn'>
+              <img src='img/ninja.png'>
+              <br>
+              <span class='user-name'>{{vm.userName}}</span>
+            </div>
+            <div ng-show='!vm.loggedIn'>
+              <button class='button icon-left icon button-clear ion-log-in'>Login
+              </button>
+            </div>
           </td>
           <td class='project'>
             <span class='project-name-header'>Project</span>
@@ -23,10 +29,12 @@
         </tr>
         <tr>
           <td class='project-buttons'>
-            <button ng-click='vm.editProject();' class='button button-small button-clear icon-left ion-edit'>Edit
+            <button menu-close ng-click='vm.editProject();' class='button button-small button-clear icon-left ion-edit'>
+              Edit
               Project
             </button>
-            <button ng-click='vm.openTools();' class='button button-small button-clear icon-left ion-settings'>Tools
+            <button menu-close ng-click='vm.openTools();'
+                    class='button button-small button-clear icon-left ion-settings'>Tools
             </button>
           </td>
         </tr>
