--- a/www/app/project/project.html
+++ b/www/app/project/project.html
@@ -1,10 +1,18 @@
+<form name='straboForm' novalidate=''>
 <ion-view title='Project Properties'>
   <ion-nav-buttons side='left'>
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
-  <ion-content class='has-header'>
-    <div class='padding'>
-      Edit project properties - in development
+  <ion-nav-buttons side='right'>
+    <div ng-if='vm.pristine || !vm.valid'>
+      <button ng-click='vm.submit();' class='button disabled button-icon icon ion-checkmark-circled'></button>
     </div>
+    <div ng-if='!vm.pristine && vm.valid'>
+      <button ng-click='vm.submit();' class='button button-icon icon ion-checkmark-circled'></button>
+    </div>
+  </ion-nav-buttons>
+  <ion-content class='has-header'>
+    <auto-fields/>
   </ion-content>
 </ion-view>
+</form>
