--- a/www/app/spot/rocksample-tab.html
+++ b/www/app/spot/rocksample-tab.html
@@ -94,7 +94,7 @@
             </div>
             <div ng-if='rockSampleForm[field.name].$touched'>
               <div ng-messages='rockSampleForm[field.name].$error'>
-                <div ng-messages-include='app/spot/error-messages.html'></div>
+                <div ng-messages-include='app/form/error-messages.html'></div>
               </div>
             </div>
           </div>
