--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,9 @@
     <script src="lib/localforage.js"></script>
     <script src="lib/angular-localForage.js"></script>
 
+    <!-- Papa Parse (csv to json) -->
+    <script src="lib/papaparse.min.js"></script>
+
     <!-- turf -->
     <script src="lib/turf/turf.js"></script>
 
@@ -84,6 +87,7 @@
     <script src="app/spot/rocksample-tab.controller.js"></script>
 
     <!-- ng factories -->
+    <script src="app/form/form.factory.js"></script>
     <script src="app/map/coordinate-range.factory.js"></script>
     <script src="app/map/image-map.factory.js"></script>
     <script src="app/map/map-draw.factory.js"></script>
@@ -94,6 +98,7 @@
     <script src="app/map/offline-tile.factory.js"></script>
     <script src="app/map/slippy-tile-names.factory.js"></script>
     <script src="app/map/symbology.factory.js"></script>
+    <script src="app/project/project.factory.js"></script>
     <script src="app/remote-connection/remote-server.factory.js"></script>
     <script src="app/settings/settings.factory.js"></script>
     <script src="app/shared/current-spot.factory.js"></script>
@@ -106,6 +111,9 @@
 
     <!-- ng filters -->
     <script src="app/map/normalize-bytes.filter.js"></script>
+
+    <!-- ng directives -->
+    <script src="app/form/auto-fields.directive.js"></script>
 
   </head>
   <body ng-app="app">
