Rename Settings as Preferences

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -56,8 +56,8 @@
         <ion-item nav-clear menu-close href='#/app/search'>
           Search
         </ion-item>
-        <ion-item nav-clear menu-close href='#/app/settings'>
-          Settings
+        <ion-item nav-clear menu-close href='#/app/preferences'>
+          Preferences
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/debug'>
           Random Points (testing only)
