--- a/www/index.html
+++ b/www/index.html
@@ -58,19 +58,19 @@
     <script src="app/app.config.js"></script>
 
     <!-- ng controllers -->
-    <script src="app/remote-connection/login.controller.js"></script>
-    <script src="app/map/map.controller.js"></script>
-    <script src="app/spots/spots.controller.js"></script>
-    <script src="app/settings/settings.controller.js"></script>
-    <script src="app/spots/spot-types-modal.controller.js"></script>
-    <script src="app/remote-connection/sync-modal.controller.js"></script>
-    <script src="app/map/offline-map.controller.js"></script>
-    <script src="app/map/archive-tiles.controller.js"></script>
+    <script src="app/config/preferences.controller.js"></script>
     <script src="app/debug/debug.controller.js"></script>
-    <script src="app/map/image-maps.controller.js"></script>
+    <script src="app/map/archive-tiles.controller.js"></script>
     <script src="app/map/image-map.controller.js"></script>
+    <script src="app/map/image-maps.controller.js"></script>
+    <script src="app/map/map.controller.js"></script>
+    <script src="app/map/offline-map.controller.js"></script>
     <script src="app/menu/menu.controller.js"></script>
     <script src="app/project/project.controller.js"></script>
+    <script src="app/remote-connection/login.controller.js"></script>
+    <script src="app/remote-connection/sync-modal.controller.js"></script>
+    <script src="app/spots/spots.controller.js"></script>
+    <script src="app/spots/spot-types-modal.controller.js"></script>
     <script src="app/user/user.controller.js"></script>
 
     <!-- ng spot tab controllers -->
@@ -98,9 +98,9 @@
     <script src="app/map/offline-tile.factory.js"></script>
     <script src="app/map/slippy-tile-names.factory.js"></script>
     <script src="app/map/symbology.factory.js"></script>
+    <script src="app/config/preferences.factory.js"></script>
     <script src="app/project/project.factory.js"></script>
     <script src="app/remote-connection/remote-server.factory.js"></script>
-    <script src="app/settings/settings.factory.js"></script>
     <script src="app/shared/current-spot.factory.js"></script>
     <script src="app/shared/helpers.factory.js"></script>
     <script src="app/shared/localstorage.factory.js"></script>
