--- a/www/app/form/auto-fields.template.html
+++ b/www/app/form/auto-fields.template.html
@@ -89,6 +89,25 @@
         </label>
       </div>
       <div ng-switch-when='acknowledge'>
+        <ul class="list">
+          <li class="item item-toggle">
+            {{field.label}}
+            <label class='toggle'>
+              <input type='checkbox'
+                     name='{{ field.name }}'
+                     ng-checked='vm.data[field.name]'
+                     ng-click='vm.toggleChecked(field.name)'
+                     ng-required='{{ field.required }}'>
+
+              <div class="track">
+                <div class="handle"></div>
+              </div>
+            </label>
+          </li>
+        </ul>
+      </div>
+      <!--
+      <div ng-switch-when='acknowledge'>
         <label class='item item-stacked-label item-text-wrap' ng-class='vm.setSelMultClass(field)'>
           <span class='input-label'>{{field.label}}</span><br>
           <span class='item-placeholder'><small>{{ field.hint }}</small></span>
@@ -99,7 +118,7 @@
             Yes
           </ion-checkbox>
         </label>
-      </div>
+      </div>-->
       <div ng-if='straboForm[field.name].$touched'>
         <div ng-messages='straboForm[field.name].$error'>
           <div ng-messages-include='app/form/error-messages.html'></div>
