--- a/www/index.html
+++ b/www/index.html
@@ -87,6 +87,8 @@
     <script src="app/spot/rocksample-tab.controller.js"></script>
 
     <!-- ng factories -->
+    <script src="app/config/preferences.factory.js"></script>
+    <script src="app/data-models/data-models.factory.js"></script>
     <script src="app/form/form.factory.js"></script>
     <script src="app/map/coordinate-range.factory.js"></script>
     <script src="app/map/image-map.factory.js"></script>
@@ -98,7 +100,6 @@
     <script src="app/map/offline-tile.factory.js"></script>
     <script src="app/map/slippy-tile-names.factory.js"></script>
     <script src="app/map/symbology.factory.js"></script>
-    <script src="app/config/preferences.factory.js"></script>
     <script src="app/project/project.factory.js"></script>
     <script src="app/remote-connection/remote-server.factory.js"></script>
     <script src="app/shared/current-spot.factory.js"></script>
