--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -17,7 +17,8 @@
               <span class='user-name'>{{ vm.userName }}</span>
             </div>
             <div ng-show='!vm.loggedIn'>
-              <button class='button icon-left icon button-clear ion-log-in'>Login
+              <br>
+              <button class='button button-small icon-left icon button-clear ion-log-in'>Login
               </button>
             </div>
           </td>
