--- a/www/app/user/user.html
+++ b/www/app/user/user.html
@@ -2,16 +2,24 @@
   <ion-nav-buttons side='left'>
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
+  <ion-nav-buttons side='right'>
+    <div ng-if='vm.loggedIn && !vm.pristine'>
+      <button ng-click='vm.submit();' class='button button-icon icon ion-checkmark-circled'></button>
+    </div>
+    <div ng-if='!vm.loggedIn || vm.pristine'>
+      <button class='button disabled button-icon icon ion-checkmark-circled'></button>
+    </div>
+  </ion-nav-buttons>
   <ion-content class='has-header'>
-    <h6 ng-hide='vm.hideActionButtons.logout'>You are currently logged in as: {{vm.loginData.email}}</h6>
+    <h6 ng-hide='vm.hideActionButtons.logout'>You are currently logged in as: {{vm.data.login.email}}</h6>
     <label class='item item-input' ng-hide='vm.hideActionButtons.login'>
-      <input type='text' placeholder='Email' ng-model='vm.loginData.email'>
+      <input type='text' placeholder='Email' ng-model='vm.data.login.email'>
     </label>
     <label class='item item-input' ng-hide='vm.hideActionButtons.login'>
-      <input type='text' placeholder='Password' ng-model='vm.loginData.password'>
+      <input type='text' placeholder='Password' ng-model='vm.data.login.password'>
     </label>
     <button ng-click='vm.doLogin();' ng-hide='vm.hideActionButtons.login'
-            ng-disabled='!(vm.loginData.email && vm.loginData.password)'
+            ng-disabled='!(vm.data.login.email && vm.data.login.password)'
             class='button icon-left icon ion-log-in button-balanced'>Login
     </button>
     <button ng-click='vm.doLogout();' ng-hide='vm.hideActionButtons.logout'
@@ -21,9 +29,8 @@
       <br>
       <label class='item item-input item-stacked-label'>
         <span class='input-label'>Name</span>
-        <input type='text' placeholder='John Doe' ng-model='vm.userName' ng-change='onNameChange'>
+        <input type='text' placeholder='John Doe' ng-model='vm.data.user_name' ng-change='onNameChange'>
       </label>
-      <button ng-click='vm.save()' class='button icon-left icon ion-checkmark-circled button-positive'>Save</button>
     </div>
   </ion-content>
 </ion-view>
