--- a/www/index.html
+++ b/www/index.html
@@ -74,17 +74,17 @@
     <script src="app/user/user.controller.js"></script>
 
     <!-- ng spot tab controllers -->
-    <script src="app/spot/abstract-spot.controller.js"></script>
     <script src="app/spot/custom-tab.controller.js"></script>
-    <script src="app/spot/details-tab.controller.js"></script>
-    <script src="app/spot/georeference-tab.controller.js"></script>
+    <script src="app/spot/georeference-tab.controller.js"></script
     <script src="app/spot/groupmembers-tab.controller.js"></script>
     <script src="app/spot/groups-tab.controller.js"></script>
     <script src="app/spot/links-tab.controller.js"></script>
-    <script src="app/spot/notes-tab.controller.js"></script>
     <script src="app/spot/images-tab.controller.js"></script>
+    <script src="app/spot/orientation-tab.controller.js"></script>
     <script src="app/spot/rockdescription-tab.controller.js"></script>
-    <script src="app/spot/rocksample-tab.controller.js"></script>
+    <script src="app/spot/sample-tab.controller.js"></script>
+    <script src="app/spot/spot.controller.js"></script>
+    <script src="app/spot/spot-tab.controller.js"></script>
 
     <!-- ng factories -->
     <script src="app/config/preferences.factory.js"></script>
