moved spot factories to spot folder

--- a/www/index.html
+++ b/www/index.html
@@ -101,12 +101,12 @@
     <script src="app/map/symbology.factory.js"></script>
     <script src="app/project/project.factory.js"></script>
     <script src="app/remote-connection/remote-server.factory.js"></script>
-    <script src="app/shared/current-spot.factory.js"></script>
     <script src="app/shared/helpers.factory.js"></script>
     <script src="app/shared/localstorage.factory.js"></script>
-    <script src="app/shared/new-spot.factory.js"></script>
-    <script src="app/shared/spots.factory.js"></script>
     <script src="app/spot/content-model-survey.factory.js"></script>
+    <script src="app/spot/spot.factory.js"></script>
+    <script src="app/spot/spot-current.factory.js"></script>
+    <script src="app/spot/spot-new.factory.js"></script>
     <script src="app/user/user.factory.js"></script>
 
     <!-- ng filters -->
